update small changes

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -268,7 +268,7 @@ Thus, leaves develop differently throughout the canopy according to the irradian
 Plasticity throughout the canopy may emerge during new leaf development with leaves being influenced by information from adjacent mature leaves or apical meristem, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
 Overall, leaves may optimize their biochemical, anatomical and structural traits according to their light environment and height [@lloydOptimisationPhotosyntheticCarbon2010; @buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007]. 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
-Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004, @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
+Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004; @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
 As canopy shade is known to alter these trait relationships [@osnasDivergentDriversLeaf2018], further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 
 Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [e.g., @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @binLeafTraitExpression2022], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010a], and (3) across understory and canopy species [e.g., @lloydOptimisationPhotosyntheticCarbon2010]. 
@@ -312,7 +312,7 @@ In open canopies, where light is comparatively homogeneous, leaf traits may be m
 
 ## 3.2. Leaf optical properties
 Leaf optical properties are influenced by a combination of anatomical, morphological, and biochemical traits, all of which vary throughout the canopy, as outlined in sections 3.1 and 3.3.
-Higher up in the canopy, a modestly greater leaf light absorptance can impair photosynthetic machinery and would be in part mitigated by $T_{leaf}$ regulation (see sections 3.4 and 3.5; Table `r table_leaf_traits`). 
+Higher up in the canopy, a modestly greater leaf light absorptance can impair photosynthetic machinery and would be in part be mitigated by $T_{leaf}$ regulation (see sections 3.4 and 3.5; Table `r table_leaf_traits`). 
 For leaves in higher light environments, light absorptance and thus heat load can be reduced by leaf surface modifications that increase reflectance, as mentioned above, such as trichome and cuticle, and heat may be dissipated biochemically  by carotenoids, including xanthophylls [Table `r table_leaf_traits`, @leeCorrelatesLeafOptical1990; @knappVariabilityLeafOptical1998].
 Further, sun leaves allocate toward a thicker lamina with more layers of palisade cells, which act as “light pipes”, and channel the abundant light into deeper cell layers, contributing to higher photosynthetic capacity  [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990]. 
 In contrast, where shade leaves develop a  higher SLA, gaining in light absorption efficiency per mass investment, as well as denser layers of chloroplasts, and a greater proportion of spongy mesophyll, more effective for capturing diffuse light (Table `r table_leaf_traits`) [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. 
@@ -329,7 +329,7 @@ Higher photosynthetic rates (per unit leaf area) and more frequent stomatal clos
 ## 3.4. Biochemical protection against foliage light and heat damage
 
 Biochemical protection against foliage light and heat damage increases with peak radiation loads, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
-Further, by reducing photosynthesis, heat and VPD-associated stomatal closure can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007] <!--Nidhi, I feel like this sentence needs a reference. {maybe this would be better as a topic sentence without a ref? but there is one Ty suggested-->].
+Further, by reducing photosynthesis, heat and VPD-associated stomatal closure can indirectly reduce the capacity to use light energy for photochemistry, thereby increasing the potential for photoinhibition [@niinemetsPhotosynthesisResourceDistribution2007] <!--Nidhi, I feel like this sentence needs a reference. {maybe this would be better as a topic sentence without a ref? but there is one Ty suggested-->.
 Accumulation of excess light energy results in overreduction of the electron transport chain and the formation of harmful reactive oxygen species [@niyogiSafetyValvesPhotosynthesis2000; @suzukiReactiveOxygenSpecies2006a].
 A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) mechanism that responds to the increased thylakoid pH gradient caused by accumulated light energy [@niyogiSafetyValvesPhotosynthesis2000; @gossBiodiversityNPQ2015].
 This form of NPQ is accomplished by the interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry.
