--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2973,6 +2973,23 @@
   file = {/Users/nidhivinod/Zotero/storage/NGPRGGDZ/Domingues et al. - 2005 - Parameterization of Canopy Structure and Leaf-Leve.pdf}
 }
 
+@article{dominguesParameterizationCanopyStructure2005a,
+  title = {Parameterization of {{Canopy Structure}} and {{Leaf-Level Gas Exchange}} for an {{Eastern Amazonian Tropical Rain Forest}} ({{Tapajós National Forest}}, {{Pará}}, {{Brazil}})},
+  author = {Domingues, Tomas F. and Berry, Joseph A. and Martinelli, Luiz A. and Ometto, Jean P. H. B. and Ehleringer, James R.},
+  date = {2005-10-01},
+  journaltitle = {Earth Interactions},
+  volume = {9},
+  number = {17},
+  pages = {1--23},
+  publisher = {{American Meteorological Society}},
+  doi = {10.1175/EI149.1},
+  url = {https://journals.ametsoc.org/view/journals/eint/9/17/ei149.1.xml},
+  urldate = {2022-02-20},
+  abstract = {Abstract Carbon flux of Amazonian primary forest vegetation has been shown to vary both spatially and temporally. Process-based models are adequate tools to understand the basis of such variation and can also provide projections to future scenarios. The parameterization of such process-based models requires information from the vegetation in question simply because ecosystem-level gas exchange is a direct result of the tightly coupled interaction between local vegetation and regional climate. In this study, data are presented concerning canopy structure [leaf area index (LAI), and the ratio of leaf dry mass to leaf area (LMA)], leaf chemistry [area-based foliar nitrogen content (Narea) and carbon isotope composition (δ13C)], and photosynthetic gas exchange [maximum carbon assimilation rates (Amax), stomatal conductance (gs@Amax), maximum carboxylation capacity (Vcmax), and respiration rates (Rd)] versus relative height from an extensive survey of primary forest vegetation of the Santarém region (eastern Amazon, Santarém, Federal State of Pará, Brazil). Ground-level LAI values ranged between 4.5 and 5.9. Both Amax and Vcmax showed large variations within the canopy profile with values ranging between 2.4 and 15.7 μmol m−2 s−1 and between 10.1 and 105.7 μmol m−2 s−1, respectively. Also, Narea varied between 0.75 to 4.19 gN m−2, and similar to Amax and Vcmax, showed higher values at the top of the canopy. Variations were detected among sites in patterns of vertical distribution of Narea and LAI, indicating spatial heterogeneity of the forest. Also, no statistically significant evidence of seasonal variations on parameters was observed, indicating that there is limited gas exchange acclimation by the vegetation to wet or dry seasons.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/3TUFW7XD/Domingues et al. - 2005 - Parameterization of Canopy Structure and Leaf-Leve.pdf}
+}
+
 @article{dongBiophysicalHomoeostasisLeaf2017,
   title = {Biophysical Homoeostasis of Leaf Temperature: {{A}} Neglected Process for Vegetation and Land-Surface Modelling},
   shorttitle = {Biophysical Homoeostasis of Leaf Temperature},
