removed duplicate citation

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -3658,26 +3658,6 @@
   file = {/Users/nidhivinod/Zotero/storage/KL4H6VN4/Fisher et al. - 2018 - Vegetation demographics in Earth System Models A .pdf;/Users/nidhivinod/Zotero/storage/VVIJYWKU/gcb.html}
 }
 
-@article{fisherVegetationDemographicsEarth2018a,
-  title = {Vegetation Demographics in {{Earth System Models}}: {{A}} Review of Progress and Priorities},
-  shorttitle = {Vegetation Demographics in {{Earth System Models}}},
-  author = {Fisher, Rosie A. and Koven, Charles D. and Anderegg, William R. L. and Christoffersen, Bradley O. and Dietze, Michael C. and Farrior, Caroline E. and Holm, Jennifer A. and Hurtt, George C. and Knox, Ryan G. and Lawrence, Peter J. and Lichstein, Jeremy W. and Longo, Marcos and Matheny, Ashley M. and Medvigy, David and Muller-Landau, Helene C. and Powell, Thomas L. and Serbin, Shawn P. and Sato, Hisashi and Shuman, Jacquelyn K. and Smith, Benjamin and Trugman, Anna T. and Viskari, Toni and Verbeeck, Hans and Weng, Ensheng and Xu, Chonggang and Xu, Xiangtao and Zhang, Tao and Moorcroft, Paul R.},
-  date = {2018},
-  journaltitle = {Global Change Biology},
-  volume = {24},
-  number = {1},
-  pages = {35--54},
-  issn = {1365-2486},
-  doi = {10.1111/gcb.13910},
-  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.13910},
-  urldate = {2022-01-22},
-  abstract = {Numerous current efforts seek to improve the representation of ecosystem ecology and vegetation demographic processes within Earth System Models (ESMs). These developments are widely viewed as an important step in developing greater realism in predictions of future ecosystem states and fluxes. Increased realism, however, leads to increased model complexity, with new features raising a suite of ecological questions that require empirical constraints. Here, we review the developments that permit the representation of plant demographics in ESMs, and identify issues raised by these developments that highlight important gaps in ecological understanding. These issues inevitably translate into uncertainty in model projections but also allow models to be applied to new processes and questions concerning the dynamics of real-world ecosystems. We argue that stronger and more innovative connections to data, across the range of scales considered, are required to address these gaps in understanding. The development of first-generation land surface models as a unifying framework for ecophysiological understanding stimulated much research into plant physiological traits and gas exchange. Constraining predictions at ecologically relevant spatial and temporal scales will require a similar investment of effort and intensified inter-disciplinary communication.},
-  langid = {english},
-  keywords = {carbon cycle,demographics,dynamic global vegetation models,Earth System Model,ecosystem,vegetation},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.13910},
-  file = {/Users/nidhivinod/Zotero/storage/B4GAA63V/Fisher et al. - 2018 - Vegetation demographics in Earth System Models A .pdf}
-}
-
 @article{fleckThreedimensionalLaminaArchitecture2003,
   title = {Three-Dimensional Lamina Architecture Alters Light-Harvesting Efficiency in {{Fagus}}: A Leaf-Scale Analysis},
   shorttitle = {Three-Dimensional Lamina Architecture Alters Light-Harvesting Efficiency in {{Fagus}}},
@@ -9276,6 +9256,24 @@
   urldate = {2020-08-02},
   langid = {english},
   file = {/Users/nidhivinod/Zotero/storage/VXB7RIMV/Niinemets - 1999 - Research review. Components of leaf dry mass per a.pdf}
+}
+
+@article{niinemetsResponsesForestTrees2010,
+  title = {Responses of Forest Trees to Single and Multiple Environmental Stresses from Seedlings to Mature Plants: {{Past}} Stress History, Stress Interactions, Tolerance and Acclimation},
+  shorttitle = {Responses of Forest Trees to Single and Multiple Environmental Stresses from Seedlings to Mature Plants},
+  author = {Niinemets, Ülo},
+  date = {2010-10},
+  journaltitle = {Forest Ecology and Management},
+  volume = {260},
+  number = {10},
+  pages = {1623--1639},
+  issn = {03781127},
+  doi = {10.1016/j.foreco.2010.07.054},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112710004743},
+  urldate = {2020-08-02},
+  abstract = {Forest trees are exposed to a myriad of single and combined stresses with varying strength and duration throughout their lifetime, and many of the simultaneous and successive stress factors strongly interact. While much progress has been achieved in understanding the effects of single stresses on tree performance, multiple interacting stress effects cannot be adequately assessed from combination of single factor analyses. In particular, global change brings about novel combinations of severity and timing of different stresses, the effects of which on tree performance are currently hard to predict. Furthermore, the combinations of stresses commonly sustained by trees change during tree ontogeny. In addition, tree photosynthesis and growth rates decline with increasing tree age and size, while support biomass in roots, stem and branches accumulates and the concentrations of non-structural carbohydrates increase, collectively resulting in an enhancement of non-structural carbon pools. In this review, tree physiological responses to key environmental stress factors and their combinations are analyzed from seedlings to mature trees. The key conclusions of this analysis are that combined stresses can influence survival of large trees even more than chronic exposure to a single predictable stress such as drought. In addition, tree tolerance to many environmental stresses increases throughout the ontogeny as the result of accumulation of non-structural carbon pools, implying major change in sensing, response and acclimation to single and multiple stresses in trees of different size and age.},
+  langid = {english},
+  file = {/Users/nidhivinod/Zotero/storage/N864HRIQ/Niinemets - 2010 - Responses of forest trees to single and multiple e.pdf}
 }
 
 @article{niinemetsResponsesForestTrees2010,
